...
            <objects>
                <viewController title="Home" id="s6t-9e-eDg" customClass="ViewControllerHome" customModule="clubber_ios_" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="S61-vE-WKS">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="808"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Datum auswählen" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Jx3-uJ-S03">
                                <rect key="frame" x="91" y="423" width="232" height="30"/>
                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="0.69999999999999996" colorSpace="custom" customColorSpace="displayP3"/>
                                <color key="tintColor" red="0.94421905279999996" green="0.61926984789999995" blue="0.22335529330000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
...
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" verticalCompressionResistancePriority="751" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6sE-po-Qon">
                                <rect key="frame" x="143" y="461" width="128" height="33"/>
                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
                                <state key="normal" title="Events anzeigen">
                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <connections>
                                    <action selector="findDateBtn:" destination="s6t-9e-eDg" eventType="touchUpInside" id="54T-pM-c1N"/>
                                </connections>
                            </button>
...
            </objects>
            <point key="canvasLocation" x="-701.44927536231887" y="772.76785714285711"/>
        </scene>
        <!--Events-->
        <scene sceneID="mmf-3I-Lzd">
            <objects>
                <tableViewController title="Events" id="9Pk-Nn-hJz" customClass="TableViewControllerEvents" customModule="clubber_ios_" customModuleProvider="target" sceneMemberID="viewController">
                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="244" estimatedRowHeight="180" sectionHeaderHeight="28" sectionFooterHeight="28" id="B0L-8Z-1TL">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="808"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        <prototypes>
                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="reuseIdentEvents" rowHeight="245" id="qFa-0Q-Nmn" customClass="EventCell" customModule="clubber_ios_" customModuleProvider="target">
...
            </objects>
            <point key="canvasLocation" x="1360.8695652173915" y="772.09821428571422"/>
        </scene>
        <!--Clubs-->
        <scene sceneID="aAD-vh-qke">
            <objects>
                <tableViewController title="Clubs" id="nsp-K9-Fbz" customClass="TableViewControllerClubs" customModule="clubber_ios_" customModuleProvider="target" sceneMemberID="viewController">
                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="msR-b0-3PN">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="808"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        <prototypes>
                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="reuseIdentClubs" rowHeight="235" id="sYg-Tq-qTt" customClass="ClubCell" customModule="clubber_ios_" customModuleProvider="target">
...
